# fluencytracr

./: .cursorrules  .env.example  .gitignore  .mcp.json  .prettierignore  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  CODEX.md  CODEX_ENFORCEMENT_STATE.md  DEPLOY.md  FluencyTracr_V1_Event_Contract.md  README.md  README_ANTIGRAVITY.md  SCOPE_GUARDRAILS.md  agent_memory.json  design-qa.md  docker-compose.yml  mission.md  package-lock.json  package.json  pyproject.toml  requirements.txt  summary.md  vercel.json
inference/: .gitignore  README.md  pyproject.toml
inference/evidence/: ai_fluency_measurement_calibration_2026_07.json  ai_fluency_measurement_calibration_acceptance_2026_07.json  ai_fluency_measurement_calibration_full_2026_07.json  longitudinal_replicated_validation_2026_07.json  longitudinal_replicated_validation_acceptance_2026_07.json  longitudinal_replicated_validation_full_2026_07.json  longitudinal_state_space_nuts_concordance_2026_07.json  longitudinal_state_space_nuts_concordance_acceptance_2026_07.json  longitudinal_state_space_nuts_concordance_full_2026_07.json  vbd_trajectory_freeze_manifest.json  vbd_trajectory_group_effect_geometry_authorization.json  vbd_trajectory_group_effect_marginalization_authorization.json  vbd_trajectory_group_effect_marginalization_v2_authorization.json  vbd_trajectory_precision_diagnostic_authorization.json  vbd_trajectory_precision_diagnostic_v2_authorization.json  vbd_trajectory_precision_diagnostic_v3_authorization.json
inference/qa/: run_test_shard.py  test_shards.json  verify_ci_runtime.py
inference/scripts/: vbd_trajectory_group_effect_geometry_bootstrap.py  vbd_trajectory_group_effect_marginalization_bootstrap.py  vbd_trajectory_precision_diagnostic_bootstrap.py  vbd_trajectory_precision_diagnostic_v2_bootstrap.py  vbd_trajectory_precision_diagnostic_v3_bootstrap.py
inference/tests/: conftest.py  test_acceptance_study.py  test_ai_fluency_measurement_calibration.py  test_ai_fluency_measurement_calibration_acceptance.py  test_ai_fluency_measurement_calibration_evidence.py  test_ai_fluency_measurement_calibration_resumable.py  test_ai_fluency_measurement_evidence.py  test_ai_fluency_measurement_manifest.py  test_ai_fluency_ordinal_measurement.py  test_artifact_shape.py  test_calibration_runner.py  test_constants_mirror.py  test_environment_smoke.py  test_hashing.py  test_hold_paths.py  test_inference_ci_runtime.py  test_inference_harness_shards.py  test_longitudinal_artifact_shape.py  test_longitudinal_boundary_hardening.py  test_longitudinal_concordance.py  test_longitudinal_concordance_cli.py  test_longitudinal_concordance_evidence.py  test_longitudinal_hold_paths.py  test_longitudinal_replicated_validation.py  test_longitudinal_replicated_validation_cli.py  test_longitudinal_replicated_validation_controls.py  test_longitudinal_replicated_validation_evidence.py  test_longitudinal_state_space.py  test_longitudinal_synthetic.py  test_longitudinal_validation_synthetic.py  (+39 more)
(+2240 files in other folders)
