[project]
name = "learnair-engable-tool"
version = "0.1.0"
description = "Privacy-first organizational AI fluency analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LearnAIR Team"}
]
keywords = ["analytics", "privacy", "ai-fluency", "organizational-metrics"]

# No external dependencies currently - using stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
